feat: naive experimental support for BFLA detection
