# api/server/models/b_f_l_a_status.go
@@ -1,0 +1,77 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+	"encoding/json"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/validate"
+)
+
+// BFLAStatus b f l a status
+//
+// swagger:model BFLAStatus
+type BFLAStatus string
+
+func NewBFLAStatus(value BFLAStatus) *BFLAStatus {
+	v := value
+	return &v
+}
+
+const (
+
+	// BFLAStatusNONE captures enum value "NONE"
+	BFLAStatusNONE BFLAStatus = "NONE"
+
+	// BFLAStatusSUSPICIOUSSRCDENIED captures enum value "SUSPICIOUS_SRC_DENIED"
+	BFLAStatusSUSPICIOUSSRCDENIED BFLAStatus = "SUSPICIOUS_SRC_DENIED"
+
+	// BFLAStatusSUSPICIOUSSRCALLOWED captures enum value "SUSPICIOUS_SRC_ALLOWED"
+	BFLAStatusSUSPICIOUSSRCALLOWED BFLAStatus = "SUSPICIOUS_SRC_ALLOWED"
+)
+
+// for schema
+var bFLAStatusEnum []interface{}
+
+func init() {
+	var res []BFLAStatus
+	if err := json.Unmarshal([]byte(`["NONE","SUSPICIOUS_SRC_DENIED","SUSPICIOUS_SRC_ALLOWED"]`), &res); err != nil {
+		panic(err)
+	}
+	for _, v := range res {
+		bFLAStatusEnum = append(bFLAStatusEnum, v)
+	}
+}
+
+func (m BFLAStatus) validateBFLAStatusEnum(path, location string, value BFLAStatus) error {
+	if err := validate.EnumCase(path, location, value, bFLAStatusEnum, true); err != nil {
+		return err
+	}
+	return nil
+}
+
+// Validate validates this b f l a status
+func (m BFLAStatus) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	// value enum
+	if err := m.validateBFLAStatusEnum("", "body", m); err != nil {
+		return err
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// ContextValidate validates this b f l a status based on context it is used
+func (m BFLAStatus) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
