# api/server/models/k8s_object_ref.go
@@ -1,0 +1,62 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// K8sObjectRef k8s object ref
+//
+// swagger:model K8sObjectRef
+type K8sObjectRef struct {
+
+	// api version
+	APIVersion string `json:"apiVersion,omitempty"`
+
+	// kind
+	Kind string `json:"kind,omitempty"`
+
+	// name
+	Name string `json:"name,omitempty"`
+
+	// namespace
+	Namespace string `json:"namespace,omitempty"`
+
+	// uid
+	UID string `json:"uid,omitempty"`
+}
+
+// Validate validates this k8s object ref
+func (m *K8sObjectRef) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this k8s object ref based on context it is used
+func (m *K8sObjectRef) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *K8sObjectRef) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *K8sObjectRef) UnmarshalBinary(b []byte) error {
+	var res K8sObjectRef
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
